# AndroidYuvEncoder

app/: build.gradle
app/src/androidTest/java/com/hhbgk/example/androidyuvencoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  codec_jni.c  log.h
app/src/main/cpp/include/libffmpeg/: config.h
app/src/main/java/com/hhbgk/example/androidyuvencoder/: CodecWrapper.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: src_vga.264
app/src/main/res/values/: strings.xml
app/src/test/java/com/hhbgk/example/androidyuvencoder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
